--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,50 @@
 .TextBoxContainer {
-    display: flex;
-    flex-direction: row;
-    padding-bottom: 15px;
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 15px;
+  margin-left: -2px;
 }
 
 .InputTitle {
-    margin: 0;
+  margin: 2px;
 }
 
 input {
-    height: 35px;
-    width: 175px;
-    border: 2px solid lightgray;
+  padding: 1rem;
+  border: 2px solid lightgray;
+  transition: background-color 0.4s ease-in-out;
+}
+
+.errorFirstName input[name=firstName], .errorLastName input[name=lastName] {
+  background-color: #FFD9D9;
+}
+
+input:focus {
+  outline: none;
+  border: 2px solid #bbb;
 }
 
 button {
-    border: none;
-    margin-top: 20px;
-    height: 25px;
-    padding: 20px;
-    display: inline-flex;
-    align-items: center;
-    background-color: #C4C4C4;
+  border: none;
+  margin-top: 20px;
+  height: 25px;
+  padding: 20px;
+  display: inline-flex;
+  align-items: center;
+  background-color: #C4C4C4;
+  cursor: pointer;
+  font-size: 1rem;
 }
 
 button:hover {
-    background-color: gray;
+  background-color: gray;
+}
+
+.fillNotice {
+  display: none;
+  margin-left: 1rem;
+}
+
+.errorFill .fillNotice {
+  display: inline-block;
 }
