--- a/src/components/BotCheck/BotCheck.css
+++ b/src/components/BotCheck/BotCheck.css
@@ -20,12 +20,18 @@ h2 {
 
 .subtitle {
     font-size: 1.5rem;
+    margin-bottom: 2rem;
+    display: block;
 }
 
 .signatureCanvas {
-    margin-top: 2rem;
     border-bottom: 2px solid #222222;
     background-color: #aaa;
     z-index: 10;
     position: fixed;
+    transition: background-color 0.4s ease-in-out;
+}
+
+.errorSignature .signatureCanvas {
+    background-color: #BA9797;
 }
