--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .TextBoxContainer {
   display: flex;
   flex-direction: row;
-  padding-bottom: 15px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   margin-left: -2px;
 }
 
@@ -13,6 +14,7 @@ input {
   padding: 1rem;
   border: 2px solid lightgray;
   transition: background-color 0.4s ease-in-out;
+  font-size: 1em;
 }
 
 .errorFirstName input[name=firstName], .errorLastName input[name=lastName] {
